# spark_kampus

./: .gitignore  README.md  database.env  docker-compose.yml  event_ingestion.py  generate_visit_events.py  main.py  pyproject.toml  random_generator.py  reference_data_generator.py  visits_video.py
main/: examples.py  main.py  orchestrator.py
main/config/: constants.py  spark_config.py  sparksession.py
main/connectors/: delta_connector.py  kafka_connector.py  mock_database_connector.py  postgresql_connector.py
main/exceptions/: ConfigNotFoundError.py
main/processors/: normalizer.py  processor.py
simulator/: random_generator.py  visit_generator.py
tests/: conftest.py  test_angelou.py  test_compare_dataframes.py  test_normalizer.py  test_processor.py  test_transformations.py
