[tool.poetry]
name = "pyspark-starter"
version = "0.0.1"
description = "Pyspark Starter Template"
authors = ["LuisPi <info@capgemini.com>", "MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "3.0.0"
quinn = "0.5.0"
psycopg2-binary = "^2.8.6"
Faker = "^8.1.1"
progressbar = "^2.5"
kafka-python = "^2.0.2"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
chispa = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
